# simplified_marine_sim

./: .gitignore  CMakeLists.txt  README.md  package.xml
analysis/: discounted_reward_data.csv  distance_data.csv  plotting.py  reward_data.csv  reward_data_CBGA.csv  robot_1_log.txt  robot_1_type_missed.txt  score_data.csv  score_data_CBGA.csv  simulation.avi  world_log.txt
analysis/cbba/: discounted_reward_data.csv  reward_data.csv
analysis/cbba_result/: robot_1_log.txt  robot_2_log.txt  robot_3_log.txt  robot_4_log.txt  world_log.txt
analysis/cbba_result2/: robot_1_log.txt  robot_2_log.txt  robot_3_log.txt  robot_4_log.txt  world_log.txt
analysis/cbga/: discounted_reward_data.csv  reward_data.csv
analysis/cbga_result/: robot_1_log.txt  robot_2_log.txt  robot_3_log.txt  robot_4_log.txt  world_log.txt
analysis/cbga_result2/: robot_1_log.txt  robot_2_log.txt  robot_3_log.txt  robot_4_log.txt  world_log.txt
analysis/easy_imagearea_only_obstacles_comms/: notes.txt  reward_data_CBBA_nofaults.csv  (+2 more)
config/: 15_good_obs_marine_easy.json  another_input.json  blocked_unknown_obs_test.json  input.json  input2.json  input_15p_10obs_noblocks.json  input_15p_10obs_noblocks_CBGA_1_fault.json  input_15p_10obs_noblocks_CBGA_1_fault_3samplers_coop_recovery_test.json  input_15p_10obs_noblocks_CBGA_no_faults.json  input_15p_10obs_noblocks_noCBGA_1_fault.json  input_15p_10obs_noblocks_noCBGA_no_faults.json  other_input.json  yet_another_input.json
include/: CBBA.hpp  CBGA.hpp  behavior_tree.hpp  distance.hpp  greedy.hpp  message.hpp  parser.hpp  planners.hpp  planners_slow.hpp  robot.hpp  scorer.hpp  sensor_model.hpp  structs.hpp  utils.hpp  world.hpp
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
log/: latest_build
src/: CBBA.cpp  CBGA.cpp  behavior_tree.cpp  distance.cpp  greedy.cpp  message.cpp  parser.cpp  planners.cpp  planners_slow.cpp  robot.cpp  scorer.cpp  sensor_model.cpp  sim.cpp  world.cpp
(+96 files in other folders)
